[tool.pdm]
package-dir = "src"

[project]
name = "microengine-utils"
version = "1.5.1"
description = "Library for Polyswarm Microengine Utility Package"
readme = "README.md"
authors = [
    {name = "PolySwarm Developers", email = "info@polyswarm.io"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.6,<4"
dependencies = [
    "datadog>=0.36.0",
    "polyswarm-artifact>=1.4.2",
    "pydantic>=1.6.1",
    "requests>=2.22.0",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/polyswarm/microengine-utils"

[project.optional-dependencies]
tests = [
    "pytest>=5.4.2",
    "polyswarm-client",
]
content_type = [
    "puremagic",
]
